Bug: Aligning Reset Icon with Rules Button
Issue Description:
I have stumbled upon a layout issue concerning the reset icon and the rules button. These two elements, which are supposed to be aligned in the same row, are not doing so correctly. The rules button, in particular, is appearing beneath the reset icon instead of being aligned in the same row.

Attempted Solution and Persisting Problem:
An initial solution was attempted to address this issue, where both elements were placed within the same container (a div with the id 'footer-panel') and flexbox principles were applied for alignment. Techniques such as 'flex-direction' and 'flex-wrap' were utilized, as part of the flexbox properties. However, despite these efforts, the alignment problem remains.

Resource: https://css-tricks.com/snippets/css/a-guide-to-flexbox/

On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   assets/css/style.css
	new file:   assets/images/rule_diagram.png
	modified:   index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,37 @@
 /* link to google fonts*/
+@import url('https://fonts.googleapis.com/css2?family=Andika&family=Caesar+Dressing&family=Hind+Vadodara&family=Nunito+Sans&family=Rancho&display=swap');
+
+
+@import url("https://fonts.googleapis.com/css2?family=Andika&family=Caesar+Dressing&family=Hind+Vadodara&family=Nunito+Sans&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Andika&family=Caesar+Dressing&family=Jim+Nightshade&family=Nunito+Sans&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Andika&family=Caesar+Dressing&family=Montserrat+Alternates&family=Nunito+Sans&display=swap");
+
+/* TODO: Remove the Google Font link below */
 @import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Forum&family=Martel&display=swap");
 
 /* general styles */
 :root {
   /* fonts */
-  --title: "Alegreya", serif;
-  --sub-title: "Forum", serif;
-  --main-font: "Martel", serif;
+  --title: "Caesar Dressing", serif;
+  --sub-title: "Jim Nightshade", serif;
+  --main-font: "Andika", serif;
+  --result-text: "Rancho", serif;
 
   /* colors */
-  --background: #d2d5db;
+  --background: #324b4c;
+  --game-container: #f5f5f5;
   --primary: #d8a66c;
   --info: #242335;
-  --success: #76ac58;
+  --success: #95d3a1;
   --warning: #f39c20;
-  --danger: #f44336;
-  --player_icons: #053c5e;
-  --computer_icons: #c45c49;
-  --game_background: #f5f5f5;
+  --danger: #b20710;
+  --player_icons: #0046a4;
+  --computer_icons: #b20710;
+  --button_feedback: #00c599;
+  --selection: #7e0684;
+
   /* utils */
 }
 
@@ -28,7 +42,7 @@ html {
 body {
   margin: 0;
   min-height: 100vh;
-  background-color: whitesmoke;
+  background-color: var(--background);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -37,7 +51,7 @@ body {
 .game-container {
   width: 530px;
   height: 600px;
-  background-color: var(--game_background);
+  background-color: var(--game-container);
   border-radius: 5px;
   box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.5);
 }
@@ -74,7 +88,7 @@ h2 {
 
 #player .fa-sharp,
 #player .choice {
-  color: dodgerblue;
+  color: var(--player_icons);
   cursor: pointer;
 }
 
@@ -84,13 +98,26 @@ h2 {
 }
 
 .selected {
-  color: black !important;
+  color: var(--selection) !important;
 }
 
 #computer > i,
 #computer .choice {
   color: var(--computer_icons);
 }
+
+#footer_panel{
+  flex-wrap: wrap;
+
+}
+
+/* .reset_icon_container { 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8%;
+  margin-bottom: 5%;
+} */
 
 .reset-icon {
   font-size: 30px;
@@ -108,8 +135,8 @@ h2 {
   font-size: 40px;
   margin: unset;
   margin-top: 20px;
+  font-family: var(--result-text);
 }
-
 
 /* Confetti positioning */
 #confetti-canvas {
@@ -117,11 +144,12 @@ h2 {
   z-index: -1;
 }
 
-.rules-button-container {
+/* .rules-button-container { 
   display: flex;
   justify-content: center;
   align-items: center;
-}
+  margin-top: 5%;
+}*/
 
 /*Rules Modal Code Snippet modified from the source: https://www.w3schools.com/howto/howto_css_modals.asp  */
 
@@ -135,8 +163,8 @@ h2 {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
 }
 
 /* Modal Content/Box */
@@ -145,7 +173,14 @@ h2 {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 75%; /* Could be more or less, depending on screen size */
+}
+
+/* Modal Diagram Settings */
+#gameplay-diagram {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* The Close Button */
@@ -166,19 +201,24 @@ h2 {
 /* Rules Modal Button code snippet modified from the source button89 by Temani Afif: https://getcssscan.com/css-buttons-examples   */
 
 #myBtn {
-  --b: 3px;   /* border thickness */
-  --s: .45em; /* size of the corner */
-  --color: #373B44;
-  
-  padding: calc(.5em + var(--s)) calc(.9em + var(--s));
+  --b: 3px; /* border thickness */
+  --s: 0.45em; /* size of the corner */
+  --color: #373b44;
+  font-family: var(--main-font);
+
+  padding: calc(0.5em + var(--s)) calc(0.9em + var(--s));
   color: var(--color);
   --_p: var(--s);
-  background:
-    conic-gradient(from 90deg at var(--b) var(--b),#0000 90deg,var(--color) 0)
-    var(--_p) var(--_p)/calc(100% - var(--b) - 2*var(--_p)) calc(100% - var(--b) - 2*var(--_p));
-  transition: .3s linear, color 0s, background-color 0s;
+  background: conic-gradient(
+      from 90deg at var(--b) var(--b),
+      #0000 90deg,
+      var(--color) 0
+    )
+    var(--_p) var(--_p) / calc(100% - var(--b) - 2 * var(--_p))
+    calc(100% - var(--b) - 2 * var(--_p));
+  transition: 0.3s linear, color 0s, background-color 0s;
   outline: var(--b) solid #0000;
-  outline-offset: .6em;
+  outline-offset: 0.6em;
   font-size: 16px;
 
   border: 0;
@@ -189,17 +229,18 @@ h2 {
 }
 
 #myBtn:hover,
-#myBtn:focus-visible{
+#myBtn:focus-visible {
   --_p: 0px;
-  outline-color: var(--color);
-  outline-offset: .05em;
+  outline-color: var(--info);
+  outline-offset: 0.05em;
+  /* background-color: var(--info);  */
+  /* color: var(--button_feedback);  */
 }
 
 #myBtn:active {
   background: var(--color);
   color: #fff;
 }
-
 
 /* Media Query: Large Smartphone (Vertical) */
 @media screen and (max-width: 600px) {
